Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94480

qdoc: Broken links to a non-existing module pages

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.0 Alpha
    • 6.2
    • Build tools: qdoc
    • None
    • 8
    • 3e88b552a1aac807504fa85bf752e6bd8542b573 (qt/qttools/dev) 341488600249ddd8c55e33e37a3cb96a56db2a79 (qt/qttools/6.2)
    • Da Vinci sprint 36

      The script that checks for broken links in the generated docs reports multiple instances of links to module pages that do not exist (e.g. qdoc-module.html).

        For Gerrit Dashboard: QTBUG-94480
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes